fix white space on right margin, update viewport meta tag and fix right sidebar for tablet view

--- a/app/assets/stylesheets/modules/dashboard/_new_dash_@media.scss
+++ b/app/assets/stylesheets/modules/dashboard/_new_dash_@media.scss
@@ -9,6 +9,9 @@
 
 
 @media handheld, screen and (max-width: 860px) {
+  html, body{
+    overflow-x: hidden;
+  }
   //left sidebar
   .mainNav{
     margin: 0;
@@ -23,6 +26,9 @@
     margin: 0 0 1vh 0;
     section{
       padding: 1vh 0;
+      figure{
+        width: 50%;
+      }
     }
   }
 }
